// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Object exploration Farm can be viewed as entries 1`] = `
[
  [
    "pig",
    {
      "img": "🐖",
      "type": "animal",
    },
  ],
  [
    "cow",
    {
      "img": "🐄",
      "type": "animal",
    },
  ],
  [
    "tractor",
    {
      "img": "🚜",
      "type": "building",
    },
  ],
  [
    "farmer",
    {
      "img": "👩‍🌾",
      "type": "human",
    },
  ],
]
`;

exports[`Object exploration Farm groups by type 1`] = `
{
  "animal": [
    {
      "img": "🐖",
      "name": "pig",
      "type": "animal",
    },
    {
      "img": "🐄",
      "name": "cow",
      "type": "animal",
    },
  ],
  "building": [
    {
      "img": "🚜",
      "name": "tractor",
      "type": "building",
    },
  ],
  "human": [
    {
      "img": "👩‍🌾",
      "name": "farmer",
      "type": "human",
    },
  ],
}
`;
